// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders using ajax-loaded object data (deep parent chain) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:14foo:14"
          >
            <Link
              to="/edit/object/foo:14"
            >
              <LinkAnchor
                href="/edit/object/foo:14"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:14"
                  onClick={[Function]}
                >
                  Fake Parent 14
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (many parents) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:0foo:0"
          >
            <Link
              to="/edit/object/foo:0"
            >
              <LinkAnchor
                href="/edit/object/foo:0"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:0"
                  onClick={[Function]}
                >
                  Fake Parent 0
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1foo:1"
          >
            <Link
              to="/edit/object/foo:1"
            >
              <LinkAnchor
                href="/edit/object/foo:1"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:2foo:2"
          >
            <Link
              to="/edit/object/foo:2"
            >
              <LinkAnchor
                href="/edit/object/foo:2"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:2"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:3foo:3"
          >
            <Link
              to="/edit/object/foo:3"
            >
              <LinkAnchor
                href="/edit/object/foo:3"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:3"
                  onClick={[Function]}
                >
                  Fake Parent 3
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:4foo:4"
          >
            <Link
              to="/edit/object/foo:4"
            >
              <LinkAnchor
                href="/edit/object/foo:4"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:4"
                  onClick={[Function]}
                >
                  Fake Parent 4
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:5foo:5"
          >
            <Link
              to="/edit/object/foo:5"
            >
              <LinkAnchor
                href="/edit/object/foo:5"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:5"
                  onClick={[Function]}
                >
                  Fake Parent 5
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:6foo:6"
          >
            <Link
              to="/edit/object/foo:6"
            >
              <LinkAnchor
                href="/edit/object/foo:6"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:6"
                  onClick={[Function]}
                >
                  Fake Parent 6
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:7foo:7"
          >
            <Link
              to="/edit/object/foo:7"
            >
              <LinkAnchor
                href="/edit/object/foo:7"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:7"
                  onClick={[Function]}
                >
                  Fake Parent 7
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:8foo:8"
          >
            <Link
              to="/edit/object/foo:8"
            >
              <LinkAnchor
                href="/edit/object/foo:8"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:8"
                  onClick={[Function]}
                >
                  Fake Parent 8
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:9foo:9"
          >
            <Link
              to="/edit/object/foo:9"
            >
              <LinkAnchor
                href="/edit/object/foo:9"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:9"
                  onClick={[Function]}
                >
                  Fake Parent 9
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:10foo:10"
          >
            <Link
              to="/edit/object/foo:10"
            >
              <LinkAnchor
                href="/edit/object/foo:10"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:10"
                  onClick={[Function]}
                >
                  Fake Parent 10
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:11foo:11"
          >
            <Link
              to="/edit/object/foo:11"
            >
              <LinkAnchor
                href="/edit/object/foo:11"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:11"
                  onClick={[Function]}
                >
                  Fake Parent 11
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:12foo:12"
          >
            <Link
              to="/edit/object/foo:12"
            >
              <LinkAnchor
                href="/edit/object/foo:12"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:12"
                  onClick={[Function]}
                >
                  Fake Parent 12
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:13foo:13"
          >
            <Link
              to="/edit/object/foo:13"
            >
              <LinkAnchor
                href="/edit/object/foo:13"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:13"
                  onClick={[Function]}
                >
                  Fake Parent 13
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:14foo:14"
          >
            <Link
              to="/edit/object/foo:14"
            >
              <LinkAnchor
                href="/edit/object/foo:14"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:14"
                  onClick={[Function]}
                >
                  Fake Parent 14
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (multiple parents with common grandparent) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:1233foo:1233"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1231foo:1231"
          >
            <Link
              to="/edit/object/foo:1231"
            >
              <LinkAnchor
                href="/edit/object/foo:1231"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1231"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (no parents) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul />
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul>
          <li
            key="foo:1233foo:1233"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;
